--- a/configs/test_kube_config.yml
+++ b/configs/test_kube_config.yml
@@ -9,7 +9,10 @@ dask:
     with open('./configs/worker-specs/github-workers-cpu.yml','w') as fhandle:
         fhandle.write(template.render(env=os.environ))
 
-    cluster = KubeCluster('configs/worker-specs/github-workers-cpu.yml', namespace='zulissi')
+    print(os.environ)
+    cluster = KubeCluster(pod_template = 'configs/worker-specs/github-workers-cpu.yml', 
+                          namespace='zulissi',
+                          name='dask-catlas-%s' % os.environ['GITHUB_RUN_ID'])
     cluster.adapt(minimum=2, maximum=2, interval="30000 ms")
     client = Client(cluster)
 
