--- a/.github/workflows/test_kuberunner.yaml
+++ b/.github/workflows/test_kuberunner.yaml
@@ -33,6 +33,8 @@ jobs:
     - uses: actions/checkout@v2
       with: 
         lfs: true
+        path: catlas
     - run: |
+        cd catlas
         python setup.py develop
         python bin/predictions.py configs/test_kube_config.yml
