--- a/configs/test_kube_config.yml
+++ b/configs/test_kube_config.yml
@@ -11,7 +11,7 @@ dask:
 
     cluster = KubeCluster(pod_template = 'configs/worker-specs/github-workers-cpu.yml', 
                           namespace='zulissi',
-                          name='dask-catlas-%s' % os.environ['GITHUB_RUN_ID'])
+                          name='dask-catlas-%s-' % os.environ['GITHUB_RUN_ID'])
     cluster.adapt(minimum=2, maximum=2, interval="30000 ms")
     client = Client(cluster)
 
@@ -38,6 +38,6 @@ adslab_prediction_steps:
   - step: predict
     type: direct
     label: 'dE_gemnet_is2re_finetuned'
-    config_path: 'configs/ocp_config_checkpoints/s2ef_all_gemnet-dT.yml'
-    checkpoint_path: 'configs/ocp_config_checkpoints/gemnet_is2re_finetuned.pt'
+    config_path: '/home/jovyan/catlas/configs/ocp_config_checkpoints/s2ef_all_gemnet-dT-hardcoded.yml'
+    checkpoint_path: '/home/jovyan/catlas/configs/ocp_config_checkpoints/gemnet_is2re_finetuned.pt'
 
