lengthen timeout for dask cluster scheduler start

--- a/configs/tests/test_kubecluster.yml
+++ b/configs/tests/test_kubecluster.yml
@@ -11,7 +11,8 @@ dask:
 
     cluster = KubeCluster(pod_template = 'configs/tests/github-workers-cpu.yml', 
                           namespace='zulissi',
-                          name='dask-catlas-%s' % os.environ['GITHUB_RUN_ID'])
+                          name='dask-catlas-%s' % os.environ['GITHUB_RUN_ID'],
+                          scheduler_service_wait_timeout = 120)
     cluster.adapt(minimum=2, maximum=2, interval="30000 ms")
     client = Client(cluster)
 
