--- a/configs/automated_screens/nitrides_CO2RR.yml
+++ b/configs/automated_screens/nitrides_CO2RR.yml
@@ -11,7 +11,8 @@ dask:
 
     cluster = KubeCluster(pod_template = 'configs/tests/github-workers-cpu.yml',
                           namespace='zulissi',
-                          name='dask-catlas-%s' % os.environ['GITHUB_RUN_ID'])
+                          name='dask-catlas-%s' % os.environ['GITHUB_RUN_ID'],
+                          scheduler_service_wait_timeout = 120)
     cluster.adapt(minimum=8, maximum=100, interval="30000 ms")
     client = Client(cluster)
   partitions: 1000 # if 0, 1 row per surface otherwise number of partitions
