--- a/configs/automated_screens/nitrides_CO2RR.yml
+++ b/configs/automated_screens/nitrides_CO2RR.yml
@@ -2,9 +2,11 @@ dask:
   config: |
     from dask.distributed import Client
     from dask_kubernetes import KubeCluster
+    import dask
     import os
     from jinja2 import Template
 
+    dask.config.set({"distributed.comm.timeouts.connect":120})
     template = Template(open('configs/tests/github-workers-cpu.tmpl').read())
     with open('./configs/tests/github-workers-cpu.yml','w') as fhandle:
         fhandle.write(template.render(**os.environ))
