--- a/configs/debug_configs/kirby_inputs.yml
+++ b/configs/debug_configs/kirby_inputs.yml
@@ -1,9 +1,9 @@
 adslab_prediction_steps:
-- config_path: /home/jovyan/catlas/configs/ocp_config_checkpoints/gemnet_actual.yml
-  checkpoint_path: /home/jovyan/catlas/configs/ocp_config_checkpoints/gemnet_is2re_finetuned.pt
-  label: dE_gemnet_is2re_finetuned
-  step: predict
-  type: direct
+  - step: predict
+    type: direct
+    label: 'dE_gemnet_is2re_finetuned'
+    config_path: '/home/jovyan/catlas/configs/ocp_config_checkpoints/s2ef_all_gemnet-dT-hardcoded.yml'
+    checkpoint_path: '/home/jovyan/catlas/configs/ocp_config_checkpoints/gemnet_is2re_finetuned.pt'
 adsorbate_filters:
   filter_by_smiles:
   - '*H'
