--- a/configs/debug_configs/nitrides_CO2RR_dev.yml
+++ b/configs/debug_configs/nitrides_CO2RR_dev.yml
@@ -21,7 +21,7 @@ memory_cache_location: '/home/jovyan/shared-scratch/catlas_cache'
 
 output_options:
   pickle: False # True pickles the resulting predictions
-  optional_additional_path_str: 'HER_test_screen'
+  optional_additional_path_str: 'CO2RR_test_screen'
   verbose: true
 
 bulk_filters:
