--- a/configs/debug_configs/metals_HER.yml
+++ b/configs/debug_configs/metals_HER.yml
@@ -8,8 +8,8 @@ dask:
 
     dask.config.set({"distributed.comm.timeouts.connect":120})
 
-    cluster = KubeCluster(pod_template = 'configs/tests/workers-cpu-dev.yml',
-                          namespace='zulissi',
+    cluster = KubeCluster(pod_template = 'configs/debug_configs/workers-cpu-dev.yml',
+                          namespace='kbroderick',
                           name='dask-catlas-dev',
                           scheduler_service_wait_timeout = 120)
     cluster.adapt(minimum=8, maximum=100, interval="30000 ms")
