--- a/configs/debug_configs/metals_HER.yml
+++ b/configs/debug_configs/metals_HER.yml
@@ -12,7 +12,7 @@ dask:
                           namespace='kbroderick',
                           name='dask-catlas-dev',
                           scheduler_service_wait_timeout = 120)
-    cluster.adapt(minimum=1, maximum=40, interval="30000 ms")
+    cluster.adapt(minimum=1, maximum=100, interval="30000 ms")
     client = Client(cluster)
 
   partitions: 1000 # if 0, 1 row per surface otherwise number of partitions
@@ -21,7 +21,7 @@ memory_cache_location: '/home/jovyan/shared-scratch/catlas_cache'
 
 output_options:
   pickle: False # True pickles the resulting predictions
-  optional_additional_path_str: 'HER_test_screen'
+  pickle_path: '/home/jovyan/shared-scratch/Inference/HER_test_screen.pkl'
   verbose: true
 
 bulk_filters:
