--- a/configs/debug_configs/workers-cpu-dev.yml
+++ b/configs/debug_configs/workers-cpu-dev.yml
@@ -4,20 +4,24 @@ spec:
   containers:
   - image: ulissigroup/kubeflow:predictions
     imagePullPolicy: Always
-    args: [dask-worker, --nthreads, '1',--nprocs,'2', --no-dashboard, --memory-limit,'16 GiB',--death-timeout, '600']
+    args: [dask-worker, --nthreads, '2',--nprocs,'8', --no-dashboard, --memory-limit,'4 GiB',--death-timeout, '600']
     name: dask
     env:
     - name: OMP_NUM_THREADS
       value: 2
     - name: PYTHONPATH
       value: "/home/jovyan/ocp:/home/jovyan/catlas"
+    - name: NVIDIA_VISIBLE_DEVICES
+      value: "none"
     resources:
       limits:
-        cpu: "4"
-        memory: 32G
+        cpu: "16"
+        memory: 16G
+        nvidia.com/gpu: "0"
       requests:
-        cpu: "4"
-        memory: 32G
+        cpu: "16"
+        memory: 16G
+        nvidia.com/gpu: "0"
     volumeMounts:
     - mountPath: /home/jovyan/ocp
       name: workspace-inference
