--- a/configs/debug_configs/workers-gpu-dev.yml
+++ b/configs/debug_configs/workers-gpu-dev.yml
@@ -1,10 +1,19 @@
 kind: Pod
 spec:
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+        - matchExpressions:
+          - key: nvidia.com/gpu.product
+            operator: In
+            values:
+            - RTX-A6000
   restartPolicy: Never
   containers:
   - image: ulissigroup/kubeflow:predictions
     imagePullPolicy: Always
-    args: [dask-worker, --nthreads, '1',--nprocs,'1', --no-dashboard, --memory-limit,'16 GiB',--death-timeout, '600']
+    args: [dask-worker, --nthreads, '2',--nprocs,'1', --no-dashboard, --memory-limit,'32 GiB',--death-timeout, '600',--resources,"GPU=1",--no-nanny]
     name: dask
     env:
     - name: OMP_NUM_THREADS
@@ -13,12 +22,12 @@ spec:
       value: "/home/jovyan/ocp:/home/jovyan/catlas"
     resources:
       limits:
-        cpu: "4"
-        memory: 16G
+        cpu: "2"
+        memory: 32G
         nvidia.com/gpu: "1"
       requests:
-        cpu: "4"
-        memory: 16G
+        cpu: "2"
+        memory: 32G
         nvidia.com/gpu: "1"
     volumeMounts:
     - mountPath: /home/jovyan/ocp
