--- a/configs/debug_configs/workers-cpu-dev.yml
+++ b/configs/debug_configs/workers-cpu-dev.yml
@@ -4,22 +4,24 @@ spec:
   containers:
   - image: ulissigroup/kubeflow:predictions
     imagePullPolicy: Always
-    args: [dask-worker, --nthreads, '2',--nprocs,'8', --no-dashboard, --memory-limit,'4 GiB',--death-timeout, '600']
+    args: [dask-worker, --nthreads, '1',--nprocs,'2', --no-dashboard, --memory-limit,'8 GiB',--death-timeout, '600']
     name: dask
     env:
     - name: OMP_NUM_THREADS
-      value: 2
+      value: 4
     - name: PYTHONPATH
       value: "/home/jovyan/ocp:/home/jovyan/catlas"
     - name: NVIDIA_VISIBLE_DEVICES
       value: "none"
+    - name: MALLOC_TRIM_THRESHOLD_
+      value: 0
     resources:
       limits:
-        cpu: "16"
+        cpu: "4"
         memory: 16G
         nvidia.com/gpu: "0"
       requests:
-        cpu: "16"
+        cpu: "4"
         memory: 16G
         nvidia.com/gpu: "0"
     volumeMounts:
@@ -30,12 +32,15 @@ spec:
       name: workspace-inference
       subPath: catlas
     - mountPath: /home/jovyan/shared-scratch
-      name: scratch-scratch
+      name: shared-scratch
+    - mountPath: /home/jovyan/dask-worker-space
+      name: shared-scratch
+      subPath: catlas/dask-worker-space
   volumes:
   - name: workspace-inference
     persistentVolumeClaim:
       claimName: workspace-inference
-  - name: scratch-scratch
+  - name: shared-scratch
     persistentVolumeClaim:
       claimName: shared-scratch
       
