--- a/configs/debug_configs/workers-gpu-dev.yml
+++ b/configs/debug_configs/workers-gpu-dev.yml
@@ -13,21 +13,24 @@ spec:
   containers:
   - image: ulissigroup/kubeflow:predictions
     imagePullPolicy: Always
-    args: [dask-worker, --nthreads, '2',--nprocs,'1', --no-dashboard, --memory-limit,'32 GiB',--death-timeout, '600',--resources,"GPU=1",--no-nanny]
+    args: [dask-worker, --nthreads, '1',--nprocs,'1', --no-dashboard, --memory-limit,'15 GiB',--death-timeout, '600',--resources,"GPU=1"]
+    #args: [dask-worker, --nthreads, '1',--nprocs,'1', --no-dashboard, --memory-limit,'28 GiB',--death-timeout, '600',--resources,"GPU=1",--no-nanny]
     name: dask
     env:
     - name: OMP_NUM_THREADS
       value: 1
     - name: PYTHONPATH
       value: "/home/jovyan/ocp:/home/jovyan/catlas"
+    - name: MALLOC_TRIM_THRESHOLD_
+      value: 0
     resources:
       limits:
         cpu: "2"
-        memory: 32G
+        memory: 16G
         nvidia.com/gpu: "1"
       requests:
         cpu: "2"
-        memory: 32G
+        memory: 16G
         nvidia.com/gpu: "1"
     volumeMounts:
     - mountPath: /home/jovyan/ocp
@@ -37,12 +40,14 @@ spec:
       name: workspace-inference
       subPath: catlas
     - mountPath: /home/jovyan/shared-scratch
-      name: scratch-scratch
+      name: shared-scratch
+    - mountPath: /home/jovyan/dask-worker-space
+      name: shared-scratch
+      subPath: catlas/dask-worker-space
   volumes:
   - name: workspace-inference
     persistentVolumeClaim:
       claimName: workspace-inference
-  - name: scratch-scratch
+  - name: shared-scratch
     persistentVolumeClaim:
       claimName: shared-scratch
-      
