--- a/configs/debug_configs/nitrides_CO2RR_gpu_dev.yml
+++ b/configs/debug_configs/nitrides_CO2RR_gpu_dev.yml
@@ -3,17 +3,18 @@ dask:
     from dask.distributed import Client
     from dask_kubernetes import KubeCluster
     from dask_kubernetes.objects import make_pod_from_dict, clean_pod_template
+    from catlas.dask_utils import kube_cluster_new_worker
     import dask
     import os
     from jinja2 import Template
     
     dask.config.set({"distributed.comm.timeouts.connect":120})
-    dask.config.set({"distributed.worker.daemon":False})
-    dask.config.set({"distributed.worker.memory.target":False})
+    #dask.config.set({"distributed.worker.daemon":False})
+    #dask.config.set({"distributed.worker.memory.target":False})
     #dask.config.set({"distributed.worker.connections.outgoing":25})
     #dask.config.set({"distributed.worker.connections.incoming":5})
-    dask.config.set({"distributed.scheduler.allowed_failures":20})
-    dask.config.set({"distributed.comm.timeouts.connect":20})
+    dask.config.set({"distributed.scheduler.allowed_failures":2})
+    dask.config.set({"distributed.comm.timeouts.connect":120})
     dask.config.set({"distributed.comm.retry.count":2})
     
     with open('configs/debug_configs/scheduler-cpu-dev.yml') as f:
@@ -28,22 +29,12 @@ dask:
                           scheduler_service_wait_timeout = 120)
     cluster.scale(6)
     
-    def kube_cluster_new_worker(cluster, config_path):
-    
-        with open(config_path) as f:
-            worker_pod_template = make_pod_from_dict(dask.config.expand_environment_variables(
-                        yaml.safe_load(f)
-                    ))
-            clean_worker_template = clean_pod_template(worker_pod_template, pod_type="worker")
-            cluster.pod_template = cluster._fill_pod_templates(clean_worker_template,  pod_type="worker")
-            cluster.new_spec["options"]["pod_template"]=cluster.pod_template
-        
     kube_cluster_new_worker(cluster, 'configs/debug_configs/workers-cpu-dev.yml')
     cluster.scale(40)
     #cluster.adapt(minimum=2, maximum=4, interval="30000 ms")
     client = Client(cluster)
 
-  partitions: 1000 # if 0, 1 row per surface otherwise number of partitions
+  partitions: -1 # if -1, do one partition per bulk/adsorbate
 
 memory_cache_location: '/home/jovyan/shared-scratch/catlas_cache_v2'
 
