--- a/configs/tests/test_kubecluster.yml
+++ b/configs/tests/test_kubecluster.yml
@@ -40,6 +40,7 @@ adslab_prediction_steps:
   - step: predict
     type: direct
     gpu: false
+    batch_size: 4
     label: 'dE_gemnet_is2re_finetuned'
     config_path: '/home/jovyan/catlas/configs/ocp_config_checkpoints/gemnet_actual.yml'
     checkpoint_path: '/home/jovyan/catlas/configs/ocp_config_checkpoints/gemnet_is2re_finetuned.pt'
