use main ocp repo, not ocpcalc_fix

--- a/.github/workflows/test_catlas.yml
+++ b/.github/workflows/test_catlas.yml
@@ -22,7 +22,7 @@ jobs:
       with: 
         lfs: true
     - run: |
-        (cd /home/jovyan/ocp && git pull && git checkout ocpcalc_fix) 
+        (cd /home/jovyan/ocp && git pull) 
         python setup.py develop
         python bin/predictions.py configs/tests/test_local_scheduler.yml
 
@@ -48,7 +48,7 @@ jobs:
         mkdir -p /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID
         mkdir -p /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID/catlas
         ln -s /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID/catlas
-        (cd /home/jovyan/ocp && git pull && git checkout ocpcalc_fix)
+        (cd /home/jovyan/ocp && git pull)
         rsync -a /home/jovyan/ocp /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID/
     - uses: actions/checkout@v2
       with:
