--- a/configs/debug_configs/nitrides_CO2RR_dev.yml
+++ b/configs/debug_configs/nitrides_CO2RR_dev.yml
@@ -7,41 +7,43 @@ dask:
     from jinja2 import Template
 
     dask.config.set({"distributed.comm.timeouts.connect":120})
+    dask.config.set({"distributed.scheduler.allowed_failures":20})
+    dask.config.set({"distributed.comm.retry.count":20})
 
-    cluster = KubeCluster(pod_template = 'configs/tests/workers-cpu-dev.yml',
+    cluster = KubeCluster(pod_template = 'configs/debug_configs/workers-cpu-dev.yml',
                           namespace='zulissi',
                           name='dask-catlas-dev',
                           scheduler_service_wait_timeout = 120)
     cluster.adapt(minimum=8, maximum=100, interval="30000 ms")
     client = Client(cluster)
 
-  partitions: 1000 # if 0, 1 row per surface otherwise number of partitions
+  partitions: -1 # if 0, 1 row per surface otherwise number of partitions
 
-memory_cache_location: '/home/jovyan/shared-scratch/catlas_cache'
+
+memory_cache_location: '/home/jovyan/shared-scratch/catlas_cache_v2'
 
 output_options:
-  pickle: False # True pickles the resulting predictions
+  pickle: True # True pickles the resulting predictions
+  pickle_path: '/home/jovyan/shared-scratch/zulissi/co2rr_nitrides_miller2.pkl'
   optional_additional_path_str: 'CO2RR_test_screen'
-  verbose: true
+  verbose: False
 
 bulk_filters:
-    filter_by_acceptable_elements: ['N', 'Sc', 'Ti', 'V', 'Cr', 'Mn', 'Fe', 'Co', 'Ni', 'Cu', 'Zn', 'Y', 'Zr', 'Nb', 'Mo', 'Tc', 'Ru', 'Rh', 'Pd', 'Ag', 'Cd', 'Ta', 'W', 'Re', 'Os', 'Ir', 'Pt', 'Au', 'Hg', 'Al', 'Ga', 'Sn', Pb', 'Bi', 'In']
-
-    filter_by_object_size: 60 # 60
-
-    filter_by_required_elements: ['N']
+  filter_by_acceptable_elements: ['N', 'Sc', 'Ti', 'V', 'Cr', 'Mn', 'Fe', 'Co', 'Ni', 'Cu', 'Zn', 'Y', 'Zr', 'Nb', 'Mo', 'Tc', 'Ru', 'Rh', 'Pd', 'Ag', 'Cd', 'Ta', 'W', 'Re', 'Os', 'Ir', 'Pt', 'Au', 'Hg', 'Al', 'Ga', 'Sn', Pb', 'Bi', 'In']
+  filter_by_object_size: 40 # 60
+  filter_by_required_elements: ['N']
 
 adsorbate_filters:
-    filter_by_smiles: ['*H', '*CO','*OH','*CHO']
+  filter_by_smiles: ['*H', '*CO','*OH','*CHO']
 
 slab_filters:
-    filter_by_object_size: 100
-    filter_by_max_miller_index: 2
-    
-adslab_prediction_steps:
-  - step: predict
-    type: direct
-    label: 'dE_gemnet_is2re_finetuned'
-    config_path: '/home/jovyan/catlas/configs/ocp_config_checkpoints/s2ef_all_gemnet-dT-hardcoded.yml'
-    checkpoint_path: '/home/jovyan/catlas/configs/ocp_config_checkpoints/gemnet_is2re_finetuned.pt'
+  filter_by_object_size: 80
+  filter_by_max_miller_index: 2
 
+adslab_prediction_steps:
+- step: predict
+  type: direct
+  gpu: false
+  batch_size: 4
+  label: 'dE_gemnet_is2re_finetuned'
+  checkpoint_path: '/home/jovyan/catlas/configs/ocp_config_checkpoints/gemnet-is2re-finetuned-11-01.pt'
