typo in nitride screen

--- a/configs/automated_screens/nitrides_CO2RR.yml
+++ b/configs/automated_screens/nitrides_CO2RR.yml
@@ -6,7 +6,7 @@ memory_cache_location: '/home/jovyan/shared-scratch/catlas/cache_github'
 output_options:
   pickle: True # True pickles the resulting predictions
   pickle_path: '/home/jovyan/shared-scratch/catlas/outputs/nitrides_CO2RR_{{ GITHUB_RUN_ID }}.pkl'
-  cnofig_path: '/home/jovyan/shared-scratch/catlas/outputs/nitrides_CO2RR_{{ GITHUB_RUN_ID }}.yml'
+  config_path: '/home/jovyan/shared-scratch/catlas/outputs/nitrides_CO2RR_{{ GITHUB_RUN_ID }}.yml'
   verbose: False
 
 bulk_filters:
