--- a/.github/workflows/automated_screens.yml
+++ b/.github/workflows/automated_screens.yml
@@ -7,8 +7,8 @@ on: [workflow_dispatch]
 
 jobs:
 
-  nitrides_CO2RR:
-    name: Screen nitrides for CO2RR
+  automated screens:
+    name: automated screens
 
     runs-on: [self-hosted, linux, shared-scratch]
 
@@ -39,102 +39,9 @@ jobs:
         cd catlas
         python setup.py develop
         python bin/predictions.py configs/automated_screens/nitrides_CO2RR.yml configs/dask_cluster/github_kube_cluster/github_kube_hybrid_cluster.py
-
-  intermetallics_ORR:
-    name: Screen intermetallics for ORR
-
-    runs-on: [self-hosted, linux, shared-scratch]
-
-    container:
-      image: docker://ulissigroup/kubeflow:predictions
-      volumes:
-        - /home/jovyan/shared-scratch:/home/jovyan/shared-scratch
-
-    steps:
-    - uses: azure/k8s-set-context@v1
-      with:
-        method: kubeconfig
-        kubeconfig: ${{ secrets.ZULISSI_KUBECONFIG }}
-        context: ulissigroup-desktops-fqdn
-      id: setcontext
     - run: |
-        sudo apt update && sudo apt install git-lfs
-        mkdir -p /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID
-        mkdir -p /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID/catlas
-        ln -s /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID/catlas
-        (cd /home/jovyan/ocp && git pull)
-        rsync -a /home/jovyan/ocp /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID/
-    - uses: actions/checkout@v2
-      with:
-        lfs: true
-        path: catlas
-    - run: |
-        cd catlas
-        python setup.py develop
         python bin/predictions.py configs/automated_screens/intermetallics_ORR.yml configs/dask_cluster/github_kube_cluster/github_kube_hybrid_cluster.py
-
-  intermetallics_HER:
-    name: Screen intermetallics for HER
-
-    runs-on: [self-hosted, linux, shared-scratch]
-
-    container:
-      image: docker://ulissigroup/kubeflow:predictions
-      volumes:
-        - /home/jovyan/shared-scratch:/home/jovyan/shared-scratch
-
-    steps:
-    - uses: azure/k8s-set-context@v1
-      with:
-        method: kubeconfig
-        kubeconfig: ${{ secrets.ZULISSI_KUBECONFIG }}
-        context: ulissigroup-desktops-fqdn
-      id: setcontext
     - run: |
-        sudo apt update && sudo apt install git-lfs
-        mkdir -p /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID
-        mkdir -p /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID/catlas
-        ln -s /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID/catlas
-        (cd /home/jovyan/ocp && git pull)
-        rsync -a /home/jovyan/ocp /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID/
-    - uses: actions/checkout@v2
-      with:
-        lfs: true
-        path: catlas
-    - run: |
-        cd catlas
-        python setup.py develop
         python bin/predictions.py configs/automated_screens/intermetallics_HER.yml configs/dask_cluster/github_kube_cluster/github_kube_hybrid_cluster.py
-
-  intermetallics_CO2RR:
-    name: Screen intermetallics for CO2RR
-
-    runs-on: [self-hosted, linux, shared-scratch]
-
-    container:
-      image: docker://ulissigroup/kubeflow:predictions
-      volumes:
-        - /home/jovyan/shared-scratch:/home/jovyan/shared-scratch
-
-    steps:
-    - uses: azure/k8s-set-context@v1
-      with:
-        method: kubeconfig
-        kubeconfig: ${{ secrets.ZULISSI_KUBECONFIG }}
-        context: ulissigroup-desktops-fqdn
-      id: setcontext
     - run: |
-        sudo apt update && sudo apt install git-lfs
-        mkdir -p /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID
-        mkdir -p /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID/catlas
-        ln -s /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID/catlas
-        (cd /home/jovyan/ocp && git pull)
-        rsync -a /home/jovyan/ocp /home/jovyan/shared-scratch/catlas_runners/$GITHUB_RUN_ID/
-    - uses: actions/checkout@v2
-      with:
-        lfs: true
-        path: catlas
-    - run: |
-        cd catlas
-        python setup.py develop
         python bin/predictions.py configs/automated_screens/intermetallics_CO2RR.yml configs/dask_cluster/github_kube_cluster/github_kube_hybrid_cluster.py
