all one job to avoid duplicated clusters

--- a/.github/workflows/automated_screens.yml
+++ b/.github/workflows/automated_screens.yml
@@ -7,8 +7,8 @@ on: [workflow_dispatch]
 
 jobs:
 
-  automated screens:
-    name: automated screens
+  automated_screens:
+    name: automated screens for various chemistries
 
     runs-on: [self-hosted, linux, shared-scratch]
 
