--- a/configs/debug_configs/metals_TRI.yml
+++ b/configs/debug_configs/metals_TRI.yml
@@ -23,10 +23,27 @@ dask:
 memory_cache_location: '/home/jovyan/shared-scratch/catlas_cache_v2'
 
 output_options:
-#   pickle_path: '/home/jovyan/shared-scratch/kbroderick/metals_TRI.pkl'
+  pickle: True # True pickles the resulting predictions
+  pickle_path: '/home/jovyan/shared-scratch/kbroderick/TRI_screen2.pkl'
   verbose: False
 
+adsorbate_filters:
+  filter_by_smiles: ['*OH']
+
+slab_filters:
+  filter_by_object_size: 80
+  filter_by_max_miller_index: 2
+
+adslab_prediction_steps:
+- step: predict
+  type: direct
+  gpu: false
+  batch_size: 4
+  label: 'dE_gemnet_is2re_finetuned'
+  checkpoint_path: 'configs/ocp_config_checkpoints/gemnet-is2re-finetuned-11-01.pt'
+  
 bulk_filters:
+  filter_by_object_size: 60 # 60
   filter_by_mpids:
   - 'mp-126'
   - 'mp-1001011'
