--- a/configs/debug_configs/debug_Pt_H.yml
+++ b/configs/debug_configs/debug_Pt_H.yml
@@ -1,6 +1,9 @@
 dask:
   partitions: -1 # if 0, 1 row per surface otherwise number of partitions
 
+input_options:
+    bulk_file: 'bulk_structures/test_dict.pkl' # 'bulk_structures/ocdata_bulks.db'
+
 
 memory_cache_location: '/home/jovyan/shared-scratch/Inference/debug_cache'
 
@@ -27,4 +30,4 @@ adslab_prediction_steps:
 bulk_filters:
   filter_by_object_size: 60 # 60
   filter_by_mpids:
-  - 'mp-126'
+  - 'mp-117'
