add input option to test

--- a/configs/tests/test_metals.yml
+++ b/configs/tests/test_metals.yml
@@ -8,6 +8,9 @@ output_options:
   config_path: test_kube_cluster_output.yml
   verbose: false
 
+input_options:
+  bulk_file: 'bulk_structures/ocdata_bulks.db'
+
 bulk_filters:
     filter_by_mpids: ['mp-126','mp-30', 'mp-101']
 
