add pkl outputs as results are computed

--- a/configs/tests/test_metals.yml
+++ b/configs/tests/test_metals.yml
@@ -5,6 +5,7 @@ memory_cache_location: '/home/jovyan/shared-scratch/catlas/cache_github'
 
 output_options:
   pickle_path: test_kube_cluster_output.pkl
+  pickle_folder: '/home/jovyan/shared-scratch/catlas/outputs/test_metals/'
   config_path: test_kube_cluster_output.yml
   verbose: false
 
